--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
   <body>
     <ul class="filters">
       <li>
+        <!-- All have the same class = picker and a for attribute -->
         <label>Include Cover</label>
         <select class="picker" for="includeCover">
           <option value="">Include Cover</option>
@@ -57,7 +58,7 @@
       <li>
         <label>Role</label>
         <select class="picker" for="role">
-          <option value="">null</option>
+          <option value=""></option>
           <option value="Web Developer">Web Developer</option>
           <option value="Floor Planner">Floor Planner</option>
           <option value="Technical Writter">Technical Writter</option>
@@ -66,7 +67,7 @@
       <li>
         <label>City</label>
         <select class="picker" for="city">
-          <option value="">null</option>
+          <option value=""></option>
           <option value="Miami">Miami</option>
           <option value="Munich">Munich</option>
           <option value="Caracas">Caracas</option>
@@ -76,12 +77,20 @@
       <li>
         <label>Country</label>
         <select class="picker" for="country">
-          <option value="">null</option>
+          <option value=""></option>
           <option value="USA">USA</option>
           <option value="Germany">Germany</option>
           <option value="Canada">Canada</option>
           <option value="Venezuela">Venezuela</option>
         </select>
+      </li>
+      <li>
+        <label>Avatar Photo</label>
+        <input class="picker" for="avatarurl" type="text" />
+      </li>
+      <li>
+        <label>Cover Photo</label>
+        <input class="picker" for="background" type="text" />
       </li>
     </ul>
     <div id="widget_content"></div>
